--- a/HW1/html+css/index.html
+++ b/HW1/html+css/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HIGHLIGHT</title>
     <link href="css/highlight.css" rel="stylesheet">
 </head>
 <body>
+  <!-- main image -->
+  <div class="mainimage">
+    <img src="img/highlight.jpeg">
+  </div>
     <!-- header -->
     <header>
         <a class="logo" href="index.html"><img src="img/logo.png"></a>
@@ -28,17 +33,14 @@
                 <li><a href="https://www.vlive.tv/channel/E9A2B1"><img src="img/vlive.png"></a></li>
                 <li><a href="https://twitter.com/Highlight_AUent"><img src="img/twitter.png"></a></li>
                 <li><a href="https://www.instagram.com/Highlight_AUent/"><img src="img/instagram.png"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100045098044057"><img src="img/facebook.png"></a></li> 
+                <li><a href="https://www.facebook.com/profile.php?id=100045098044057"><img src="img/facebook.png"></a></li>
                 <li><a href="http://www.aroundusent.com/"><img src="img/aroundus.png"></a></li>
             </ul>
         </div>
-        
+
     </header>
 
-    <!-- main image -->
-    <div class="mainimage">
-        <img src="img/highlight.jpeg">
-    </div>
+
     <!-- content -->
     <div class="content">
         <!-- content line1 -->
