--- a/HW1/html+css/test.html
+++ b/HW1/html+css/test.html
@@ -21,7 +21,7 @@
       <div class="search">
           <form>
             <input type="text" placeholder="Search.." name="search">
-            <button><img src="img/search.png"></button>
+            <a><img src="img/search.png"></a>
           </form>
         </div>
       <!-- header siteurl -->
