--- a/HW1/html+css/test.html
+++ b/HW1/html+css/test.html
@@ -8,15 +8,18 @@
   </head>
   <body>
     <!--page image-->
-    <div class="index_img"></div>
-    <header>
-      <a class="logo" href="index.html"><img src="img/logo.png"></a>
-      <ul class="menu">
+    <div class="index_img">
+      <div class="header1">
+        <a class="logo" href="index.html"><img src="img/logo.png"></a>
+        <ul class="menu">
           <li><a href="yoon.html">윤두준</a></li>
           <li><a href="yang.html">양요섭</a></li>
           <li><a href="lee.html">이기광</a></li>
           <li><a href="son.html">손동운</a></li>
-      </ul>
+        </ul>
+      </div>
+    </div>
+    <div class="header2">
       <!-- header search -->
       <div class="search">
           <form>
@@ -35,6 +38,6 @@
               <li><a href="http://www.aroundusent.com/"><img src="img/aroundus.png"></a></li>
           </ul>
       </div>
-    </header>
+    </div>
   </body>
 </html>
