--- a/HW1/html+css/test.html
+++ b/HW1/html+css/test.html
@@ -39,5 +39,105 @@
           </ul>
       </div>
     </div>
+
+
+    <!--content-->
+    <div class="content">
+        <!-- content line1 -->
+        <div class="line1">
+            <div class="block1">
+                <div class="content-title">
+                    <a>Video</a>
+                </div>
+                <iframe src="video/Daydream.mp4" ></iframe>
+            </div>
+            <div class="block2">
+                <div class="content-title">
+                    <a>News</a>
+                </div>
+                <div class="content-media"></div>
+            </div>
+            <div class="block3">
+                <div class="content-title">
+                    <a>Notice</a>
+                </div>
+                <div class="content-media">
+                    <ul>
+                        <li>
+                            <dl>
+                                <dt><a href="#">[notice] Around US Ent.</a></dt>
+                                <dd>2021.11.15</dd>
+                            </dl>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- content line2 -->
+    <div class="line2">
+        <div class="block1">
+            <div class="content-title">
+                <a>Photo</a>
+            </div>
+            <div class="content-media content-media-img">
+                <img src="img/hilight.jpeg">
+            </div>
+        </div>
+        <div class="block2">
+            <div class="content-title">
+                <a>Schedule</a>
+            </div>
+            <div class="content-media">
+                <ul>
+                    <li>
+                        <dl>
+                            <dt>2022.03.31 Fri</dt>
+                            <dd>[기광] PM 12:00<br>KBS Cool FM 이기광의 가요광장</dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="block3">
+            <div class="content-title">
+              <a>History</a>
+            </div>
+            <div class="content-media history">
+                <ul>
+                    <li>
+                        <dl>
+                            <dt>2022</dt>
+                            <dd>03.21<br>HIGHLIGHT 정규 1집 'DAYDREAM' 발매</dd>
+                            <p></p>
+                            <dt>2021</dt>
+                            <dd>05.03<br>HIGHLIGHT 미니 3집 'The Blowing' 발매</dd>
+                            <p></p>
+                            <dt>2020</dt>
+                            <dd>07.27<br>윤두준 미니 1집 'Daybreak' 발매</dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!-- content line3 -->
+    <div class="line3">
+        <div>
+            <div class="content-title">
+                <a>SNS</a>
+            </div>
+            <iframe class="content-sns" src="https://twitter.com/Highlight_AUent/status/1510905517128183808?s=20&t=gyO1h8hkFbNp0IrzxY7b9Q"></iframe>
+            <iframe class="content-sns" src="https://www.instagram.com/p/Cb4OowXpJWx/?utm_source=ig_web_copy_link"></iframe>
+            <iframe class="content-sns" src="https://www.vlive.tv/post/1-28644299"></iframe>
+            <iframe class="content-sns none" src="https://www.instagram.com/p/Cbz55VYrdof/?utm_source=ig_web_copy_link"></iframe>
+        </div>
+    </div>
+</div>
+
+
+
+
   </body>
 </html>
