--- a/HW1/html+css/test.html
+++ b/HW1/html+css/test.html
@@ -128,10 +128,12 @@
             <div class="content-title">
                 <a>SNS</a>
             </div>
-            <iframe class="content-sns" src="https://twitter.com/Highlight_AUent/status/1510905517128183808?s=20&t=gyO1h8hkFbNp0IrzxY7b9Q"></iframe>
-            <iframe class="content-sns" src="https://www.instagram.com/p/Cb4OowXpJWx/?utm_source=ig_web_copy_link"></iframe>
-            <iframe class="content-sns" src="https://www.vlive.tv/post/1-28644299"></iframe>
-            <iframe class="content-sns none" src="https://www.instagram.com/p/Cbz55VYrdof/?utm_source=ig_web_copy_link"></iframe>
+            <div class="line3-content">
+              <div class="content-sns sns-block"><iframe src="https://twitter.com/Highlight_AUent/status/1510905517128183808?s=20&t=gyO1h8hkFbNp0IrzxY7b9Q"></iframe></div>
+              <div class="content-sns sns-block"><iframe src="https://www.instagram.com/p/Cb4OowXpJWx/?utm_source=ig_web_copy_link"></iframe></div>
+              <div class="content-sns sns-block"><iframe src="https://www.vlive.tv/post/1-28644299"></iframe></div>
+              <div class="content-sns"><iframe src="https://www.instagram.com/p/Cbz55VYrdof/?utm_source=ig_web_copy_link"></iframe></div>
+            </div>
         </div>
     </div>
 </div>
