--- a/HW1/html+css/test.html
+++ b/HW1/html+css/test.html
@@ -124,7 +124,7 @@
 
     <!-- content line3 -->
     <div class="line3">
-        <div>
+        <div class="line3-1">
             <div class="content-title">
                 <a>SNS</a>
             </div>
