--- a/HW1/html+css/index.html
+++ b/HW1/html+css/index.html
@@ -1,68 +1,69 @@
 <!DOCTYPE html>
-<head>
+<html>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HIGHLIGHT</title>
     <link href="css/highlight.css" rel="stylesheet">
-</head>
-<body>
-  <!-- main image -->
-  <div class="mainimage">
-    <img src="img/highlight.jpeg">
-  </div>
-    <!-- header -->
-    <header>
+  </head>
+  <body>
+    <!--page image-->
+    <div class="index_img">
+      <div class="header1">
         <a class="logo" href="index.html"><img src="img/logo.png"></a>
         <ul class="menu">
-            <li><a href="yoon.html">윤두준</a></li>
-            <li><a href="yang.html">양요섭</a></li>
-            <li><a href="lee.html">이기광</a></li>
-            <li><a href="son.html">손동운</a></li>
+          <li><a href="yoon.html">윤두준</a></li>
+          <li><a href="yang.html">양요섭</a></li>
+          <li><a href="lee.html">이기광</a></li>
+          <li><a href="son.html">손동운</a></li>
         </ul>
-        <!-- header search -->
-        <div class="search">
-            <form>
-              <input type="text" placeholder="Search.." name="search">
-              <button><img src="img/search.png"></button>
-            </form>
-          </div>
-        <!-- header siteurl -->
-        <div class="siteurl">
-            <ul>
-                <li><a href="https://www.youtube.com/channel/UCGdZ_-svzY_hPLYVSKvMFvw"><img src="img/youtube.png"></a></li>
-                <li><a href="https://www.vlive.tv/channel/E9A2B1"><img src="img/vlive.png"></a></li>
-                <li><a href="https://twitter.com/Highlight_AUent"><img src="img/twitter.png"></a></li>
-                <li><a href="https://www.instagram.com/Highlight_AUent/"><img src="img/instagram.png"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100045098044057"><img src="img/facebook.png"></a></li>
-                <li><a href="http://www.aroundusent.com/"><img src="img/aroundus.png"></a></li>
-            </ul>
+      </div>
+    </div>
+    <div class="header2">
+      <!-- header search -->
+      <div class="search">
+          <form>
+            <input type="text" placeholder="Search.." name="search">
+            <a><img src="img/search.png"></a>
+          </form>
         </div>
+      <!-- header siteurl -->
+      <div class="siteurl">
+          <ul>
+              <li><a href="https://www.youtube.com/channel/UCGdZ_-svzY_hPLYVSKvMFvw"><img src="img/youtube.png"></a></li>
+              <li><a href="https://www.vlive.tv/channel/E9A2B1"><img src="img/vlive.png"></a></li>
+              <li><a href="https://twitter.com/Highlight_AUent"><img src="img/twitter.png"></a></li>
+              <li><a href="https://www.instagram.com/Highlight_AUent/"><img src="img/instagram.png"></a></li>
+              <li><a href="https://www.facebook.com/profile.php?id=100045098044057"><img src="img/facebook.png"></a></li>
+              <li><a href="http://www.aroundusent.com/"><img src="img/aroundus.png"></a></li>
+          </ul>
+      </div>
+    </div>
 
-    </header>
 
-
-    <!-- content -->
+    <!--content-->
     <div class="content">
         <!-- content line1 -->
         <div class="line1">
-            <div>
+            <div class="block1">
                 <div class="content-title">
                     <a>Video</a>
-                    <button><a><</a></button>
-                    <button><a>></a></button>
+                    <button><</button>
+                    <button>></button>
                 </div>
                 <iframe src="video/Daydream.mp4" ></iframe>
             </div>
-            <div>
+            <div class="block2">
                 <div class="content-title">
                     <a>News</a>
-                    <button><a>+</a></button>
+                    <button>+</button>
                 </div>
                 <div class="content-media"></div>
-            </div><div>
+            </div>
+            <div class="block3">
                 <div class="content-title">
                     <a>Notice</a>
-                    <button><a>+</a></button>
+                    <button>+</button>
                 </div>
                 <div class="content-media">
                     <ul>
@@ -78,69 +79,77 @@
         </div>
 
         <!-- content line2 -->
-        <div class="line2">
-            <div>
-                <div class="content-title">
-                    <a>Photo</a>
-                    <button><a><</a></button>
-                    <button><a>></a></button>
-                </div>
-                <div class="content-media">
-                    <img src="img/hilight.jpeg"  style="width:250px;height:180px;">
-                </div>
-            </div><div>
-                <div class="content-title">
-                    <a>Schedule</a>
-                    <button><a><</a></button>
-                    <button><a>></a></button>
-                </div>
-                <div class="content-media">
-                    <ul>
-                        <li>
-                            <dl>
-                                <dt>2022.03.31 Fri</dt>
-                                <dd>[기광] PM 12:00<br>KBS Cool FM 이기광의 가요광장</dd>
-                            </dl>
-                        </li>
-                    </ul>
-                </div>
-            </div><div>
-                <div class="content-title">
-                    <a>History</a>
-                    <button><a>+</a></button>
-                </div>
-                <div class="content-media history">
-                    <ul>
-                        <li>
-                            <dl>
-                                <dt>2022</dt>
-                                <dd>03.21<br>HIGHLIGHT 정규 1집 'DAYDREAM' 발매</dd>
-                                <p></p>
-                                <dt>2021</dt>
-                                <dd>05.03<br>HIGHLIGHT 미니 3집 'The Blowing' 발매</dd>
-                                <p></p>
-                                <dt>2020</dt>
-                                <dd>07.27<br>윤두준 미니 1집 'Daybreak' 발매</dd>
-                            </dl>
-                        </li>
-                    </ul>
-                </div>
+    <div class="line2">
+        <div class="block1">
+            <div class="content-title">
+                <a>Photo</a>
+                <button><</button>
+                <button>></button>
+            </div>
+            <div class="content-media content-media-img">
+                <img src="img/hilight.jpeg">
             </div>
         </div>
-
-        <!-- content line3 -->
-        <div class="line3">
-            <div>
-                <div class="content-title-sns">
-                    <a>SNS</a>
-                    <button><a><</a></button>
-                    <button><a>></a></button>
-                </div>
-                <iframe class="content-sns" src="https://twitter.com/Highlight_AUent/status/1510905517128183808?s=20&t=gyO1h8hkFbNp0IrzxY7b9Q"></iframe>
-                <iframe class="content-sns" src="https://www.instagram.com/p/Cb4OowXpJWx/?utm_source=ig_web_copy_link"></iframe>
-                <iframe class="content-sns" src="https://www.vlive.tv/post/1-28644299"></iframe>
-                <iframe class="content-sns none" src="https://www.instagram.com/p/Cbz55VYrdof/?utm_source=ig_web_copy_link"></iframe>
+        <div class="block2">
+            <div class="content-title">
+                <a>Schedule</a>
+                <button><</button>
+                <button>></button>
+            </div>
+            <div class="content-media">
+                <ul>
+                    <li>
+                        <dl>
+                            <dt>2022.03.31 Fri</dt>
+                            <dd>[기광] PM 12:00<br>KBS Cool FM 이기광의 가요광장</dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="block3">
+            <div class="content-title">
+              <a>History</a>
+            </div>
+            <div class="content-media history">
+                <ul>
+                    <li>
+                        <dl>
+                            <dt>2022</dt>
+                            <dd>03.21<br>HIGHLIGHT 정규 1집 'DAYDREAM' 발매</dd>
+                            <p></p>
+                            <dt>2021</dt>
+                            <dd>05.03<br>HIGHLIGHT 미니 3집 'The Blowing' 발매</dd>
+                            <p></p>
+                            <dt>2020</dt>
+                            <dd>07.27<br>윤두준 미니 1집 'Daybreak' 발매</dd>
+                        </dl>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-</body>
+
+    <!-- content line3 -->
+    <div class="line3">
+        <div class="line3-1">
+            <div class="content-title">
+                <a>SNS</a>
+                <button><</button>
+                <button>></button>
+            </div>
+            <div class="line3-content">
+              <div class="content-sns sns-block"><iframe src="https://twitter.com/Highlight_AUent/status/1510905517128183808?s=20&t=gyO1h8hkFbNp0IrzxY7b9Q"></iframe></div>
+              <div class="content-sns sns-block"><iframe src="https://www.instagram.com/p/Cb4OowXpJWx/?utm_source=ig_web_copy_link"></iframe></div>
+              <div class="content-sns sns-block"><iframe src="https://www.vlive.tv/post/1-28644299"></iframe></div>
+              <div class="content-sns"><iframe src="https://www.instagram.com/p/Cbz55VYrdof/?utm_source=ig_web_copy_link"></iframe></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+  </body>
+</html>
