--- a/HW1/html+css/yang.html
+++ b/HW1/html+css/yang.html
@@ -1,151 +1,155 @@
 <!DOCTYPE html>
-<head>
+<html>
+  <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HIGHLIGHT</title>
     <link href="css/highlight.css" rel="stylesheet">
     <link href="css/member.css" rel="stylesheet">
-</head>
-<body>
-    <!-- header -->
-    <header>
+  </head>
+  <body>
+  <!--page image-->
+    <div class="yang_img">
+    <!-- header logo&menu -->
+      <div class="header1">
         <a class="logo" href="index.html"><img src="img/logo.png"></a>
         <ul class="menu">
-            <li><a href="yoon.html">윤두준</a></li>
-            <li><a href="yang.html">양요섭</a></li>
-            <li><a href="lee.html">이기광</a></li>
-            <li><a href="son.html">손동운</a></li>
+          <li><a href="yoon.html">윤두준</a></li>
+          <li><a href="yang.html">양요섭</a></li>
+          <li><a href="lee.html">이기광</a></li>
+          <li><a href="son.html">손동운</a></li>
         </ul>
-        <!-- header search -->
-        <div class="search">
-            <form>
-              <input type="text" placeholder="Search.." name="search">
-              <button><img src="img/search.png"></button>
-            </form>
-          </div>
-        <!-- header siteurl -->
-        <div class="siteurl">
-            <ul>
-                <li><a href="https://www.youtube.com/channel/UCGdZ_-svzY_hPLYVSKvMFvw"><img src="img/youtube.png"></a></li>
-                <li><a href="https://www.vlive.tv/channel/E9A2B1"><img src="img/vlive.png"></a></li>
-                <li><a href="https://twitter.com/Highlight_AUent"><img src="img/twitter.png"></a></li>
-                <li><a href="https://www.instagram.com/Highlight_AUent/"><img src="img/instagram.png"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100045098044057"><img src="img/facebook.png"></a></li> 
-                <li><a href="http://www.aroundusent.com/"><img src="img/aroundus.png"></a></li>
-            </ul>
-        </div>
-    </header>
+      </div>
+    </div>
+    <!-- header search&siteurl -->
+    <div class="header2">
+      <div class="search">
+        <form>
+          <input type="text" placeholder="Search.." name="search">
+          <a><img src="img/search.png"></a>
+        </form>
+      </div>
+      <div class="siteurl">
+        <ul>
+          <li><a href="https://www.youtube.com/channel/UCGdZ_-svzY_hPLYVSKvMFvw"><img src="img/youtube.png"></a></li>
+          <li><a href="https://www.vlive.tv/channel/E9A2B1"><img src="img/vlive.png"></a></li>
+          <li><a href="https://twitter.com/Highlight_AUent"><img src="img/twitter.png"></a></li>
+          <li><a href="https://www.instagram.com/Highlight_AUent/"><img src="img/instagram.png"></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100045098044057"><img src="img/facebook.png"></a></li>
+          <li><a href="http://www.aroundusent.com/"><img src="img/aroundus.png"></a></li>
+        </ul>
+      </div>
+    </div>
 
-    <!-- main image -->
-    <div class="yangimage">
-        <img src="img/yang.jpeg">
-    </div>
-    <!-- content -->
-    <div class="content1">
-        <!-- content line1 -->
+    <!--content-->
+    <div class="content">
+      <div class="mem_content">
         <div class="information">
-            <div class="info1">
-                <dl>
-                    <dt>양요섭</dt>
-                    <dd>Yang Yo-Seob</dd>
-                    <dd>|</dd>
-                </dl>
-                <ul class="siteurl1">
-                    <li><a href=""><img src="img/instagram2.png"></a></li>
-                    <li><a href=""><img src="img/twitter2.png"></a></li>
+          <div class="info1">
+          <dl>
+            <dt>양요섭</dt>
+            <dd>Yang Yo-Seob</dd>
+            <dd>|</dd>
+          </dl>
+            <ul class="siteurl1">
+              <li><a href="https://www.instagram.com/yysbeast/"><img src="img/instagram2.png"></a></li>
+            </ul>
+          </div>
+          <div class="info2">
+            <dl>
+              <dt>Position</dt>
+              <dd>Main Vocal</dd>
+            </dl>
+            <dl>
+              <dt>Birth</dt>
+              <dd>1990.01.05</dd>
+            </dl>
+            <dl>
+              <dt>Blood Type</dt>
+              <dd>B</dd>
+            </dl>
+          </div>
+          <div class="info3">
+            <h4>Profile</h4>
+            <dl>
+              <dt class="profile"></dt>
+              <dt>2009</dt>
+              <dd>그룹 비스트 데뷔</dd>
+              <dt>2011</dt>
+              <dd>뮤지컬 '광화문 연가' 지용 역</dd>
+              <dt>2012</dt>
+              <dd>미니 1집 'The First Collage' 발매</dd>
+              <dd>KBS2 드라마 '내 딸 서영이' 카메오 출연</dd>
+              <dt>2013</dt>
+              <dd>뮤지컬 '요셉 어메이징' 요셉 역</dd>
+              <dt>2014</dt>
+              <dd>뮤지컬 '풀 하우스' 이영재 역</dd>
+              <dd>뮤지컬 '조로' 조로&디에고 역</dd>
+              <dt>2015</dt>
+              <dd>뮤지컬 '로빈훗' 필립 왕세자 역</dd>
+              <dd>뮤지컬 '신데렐라' 크리스토퍼 역</dd>
+              <dd>tvN 드라마 '식샤를 합시다2' 구대영 친구 역</dd>
+              <dt>2017</dt>
+              <dd>그룹 하이라이트 데뷔</dd>
+              <dd>뮤지컬 '그날들' 무영 역</dd>
+              <dt>2018</dt>
+              <dd>미니 2집 '白' 발매</dd>
+              <dt>2020</dt>
+              <dd>뮤지컬 '그날들' 무영 역</dd>
+              <dt>2021</dt>
+              <dd>정규 1집 'Chocolate Box' 발매</dd>
+              <dd>뮤지컬 '그날들' 무영 역</dd>
+              <dd>뮤지컬 '썸씽 로튼' 닉 바텀 역</dd>
+            </dl>
+          </div>
+        </div>
+
+        <div class="mem_blocks">
+        <!-- content line1 -->
+          <div class="line1 mem_line">
+            <div class="mem_block">
+              <div class="content-title">
+                <a>Schedule</a>
+              </div>
+              <div class="content-media">
+                <ul>
+                  <li>
+                    <dl>
+                      <dt>2022.03.27 Sun</dt>
+                      <dd>[HIGHLIGHT] PM 15:50<br>SBS 인기가요</dd>
+                    </dl>
+                  </li>
                 </ul>
+              </div>
             </div>
-            <div class="info2">
-                <dl>
-                    <dt>Position</dt>
-                    <dd>Main Vocal</dd>
-                </dl>
-                <dl>
-                    <dt>Birth</dt>
-                    <dd>1990.01.05</dd>
-                </dl>
-                <dl>
-                    <dt>Blood Type</dt>
-                    <dd>B</dd>
-                </dl>
+          </div>
+
+          <!-- content line2 -->
+          <div class="line2 mem_line">
+            <div class="mem_block">
+              <div class="content-title">
+                <a>SNS</a>
+                <button><</button>
+                <button>></button>
+              </div>
+              <iframe src="https://www.instagram.com/p/Cb4Z4hPPL_w/?utm_source=ig_web_copy_link" ></iframe>
             </div>
-            <div class="info3">
-                <h4>Profile</h4>
-                <dl>
-                    <dt class="profile"></dt>
-                    <dt>2009</dt>
-                    <dd>그룹 비스트 데뷔</dd>
-                    <dt>2010</dt>
-                    <dd>MBC 드라마 '볼수록 애교만점' 윤두준 역, 특별출연</dd>
-                    <dt>2011</dt>
-                    <dd>MBC 드라마 '몽땅 내 사랑' 윤두준 역, 조연</dd>
-                    <dd>MBC 드라마 '천 번의 입맞춤' 윤기준 역, 특별출연</dd>
-                    <dd>JTBC 드라마 '청담동 살아요' 아이돌 그룹 리더 역, 특별출연</dd>
-                    <dt>2012</dt>
-                    <dd>영화 '가문의 영광 5 - 가문의 귀환' 장영민 역, 주연</dd>
-                    <dt>2013</dt>
-                    <dd>영화 '아이리스2 : 더 무비' 서현우 역, 조연</dd>
-                    <dd>KBS2 드라마 '아이리스2' 서현우 역, 조연</dd>
-                    <dd>tvN 드라마 '식샤를 합시다' 구대영 역, 주연</dd>
-                    <dt>2015</dt>
-                    <dd>tvN 드라마 '식샤를 합시다2' 구대영 역, 주연</dd>
-                    <dd>MBC 드라마 '퐁당퐁당 LOVE' 이도 역, 주연</dd>
-                    <dt>2016</dt>
-                    <dd>tvN 드라마 '싸우자 귀신아' 구대영 역, 특별출연</dd>
-                    <dt>2017</dt>
-                    <dd>그룹 하이라이트 데뷔</dd>
-                    <dd>tvN 드라마 '이번 생은 처음이라' '빙구의사랑'남주인공 역, 특별출연</dd>
-                    <dt>2018</dt>
-                    <dd>KBS2 드라마 '라디오 로맨스' 지수호 역, 주연</dd>
-                    <dd>tvN 드라마 '식샤를 합시다3' 구대영 역, 주연</dd>
-                    <dt>2020</dt>
-                    <dd>미니 1집 'Daybreak' 발매</dd>
-                    <dt>2021</dt>
-                    <dd>영화 '정직한 후보2' 특별출연</dd>
-                </dl>
+          </div>
+
+          <!-- content line3 -->
+          <div class="line3 mem_line">
+            <div class="mem_block">
+              <div class="content-title">
+                <a>Album</a>
+                <button><</button>
+                <button>></button>
+              </div>
+              <iframe src="video/yang.mp4" ></iframe>
             </div>
+
+          </div>
         </div>
-        <div class="content-line">
-            <div class="line1-1">
-                <div>
-                    <div class="content-title">
-                        <a>Schedule</a>
-                        <button><a><</a></button>
-                        <button><a>></a></button>
-                    </div>
-                    <div class="content-media">
-                        <ul>
-                            <li>
-                                <dl>
-                                    <dt>2022.03.27 Sun</dt>
-                                    <dd>[HIGHLIGHT] PM 15:50<br>SBS 인기가요</dd>
-                                </dl>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="line2-1">
-                <div>
-                    <div class="content-title">
-                        <a>SNS</a>
-                        <button><a><</a></button>
-                        <button><a>></a></button>
-                    </div>
-                    <iframe src="https://www.instagram.com/p/Cb57b9OB0ML/?utm_source=ig_web_copy_link" ></iframe>
-                </div>
-                
-            </div>
-            <div class="line2-1">
-                
-                <div>
-                    <div class="content-title">
-                        <a>Album</a>
-                        <button><a><</a></button>
-                        <button><a>></a></button>
-                    </div>
-                    <iframe src="video/Yoon.mp4" ></iframe>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-</body>
+  </body>
+</html>
